# django-test

./: .dockerignore  .env.tpl  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  Makefile  README.md  db.sqlite3  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
catalog/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
catalog/migrations/: 0001_initial.py
config/: settings.py  urls.py
main/: apps.py  views.py
orders/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
storefront/: apps.py  carrinho.py  context_processors.py  tests.py  urls.py  views.py
storefront/templates/registration/: login.html
storefront/templates/storefront/: base.html  carrinho.html  home.html  meus_pedidos.html  pedido_sucesso.html  product_detail.html
users/: apps.py  models.py  tests.py  views.py
users/migrations/: 0001_initial.py
