[project]
name = "django-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.7,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "markdown (>=3.10.2,<4.0.0)",
    "django-filter (>=26.1,<27.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "pillow (>=12.3.0,<13.0.0)"
]

[dependency-groups]
dev = [
    "pre-commit (>=4.6.0,<5.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
    "black (>=26.5.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.3.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
exclude = ["migrations/"]
